corrected an overflow

--- a/css/min275.css
+++ b/css/min275.css
@@ -92,6 +92,7 @@
     }
     .event{
        margin-top: 2px;
+       overflow: hidden;
     }
     .eventOverlay {
     height: 350px;
